<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back"

    tools:context="com.mahiltletdan.hw1.DetailActivity">

    <include layout="@layout/toolbar"
        tools:ignore="IncludeLayoutParam"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="603dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:contentDescription="Mahilet Hailemariam"
        android:text="@string/Me"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="54dp"
        tools:ignore="HardcodedText"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="12dp" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/mehalu"
        tools:ignore="ContentDescription"
        android:layout_alignStart="@+id/TextView2"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""  />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:text="@string/MeDetail"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="82dp"
        tools:ignore="RtlHardcoded,UnknownId,UnknownIdInLayout"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="UnknownIdInLayout"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginStart="37dp" />


</RelativeLayout>

